--- a/index_antoine.html
+++ b/index_antoine.html
@@ -7,29 +7,56 @@
     <title>Document</title>
 </head>
 <body>
-    <Div class="div_white">
-        <div class="div_first">
-            <div class="icons"></div>
-            <div class="icons"></div>
-            <div class="icons"></div>
+<div class="container my-5 py-2">
+    <h2 class="text-center font-weight-bold my-5">Smartest protection for your site</h2>
+    <div class="row">
+        <div class="col-md-4 text-center aos-init aos-animate"><img src="https://www.lapa.ninja/lab/atlas/img/smart-protect-1.jpg" alt="anti-spam" class="mx-auto">
+        <h4>Anti-spam</h4>
+        <p>Lorem ipsum dolor sit amet porro his no his deleniti</p>
         </div>
-        <div class="div_second">
-            <div class="text_boutton">
-                <h2></h2>
-                <p></p>
-                <button></button>
-            </div>
-            <div class="image_haut"></div>
+        <div class="col-md-4 text-center aos-init aos-animate"><img src="https://www.lapa.ninja/lab/atlas/img/smart-protect-2.jpg" alt="Pishing detect" class="mx-auto">
+        <h4>Pishing Detect</h4>
+        <p>Ne error antiopam usu. Sed vocen concludaturque ea</p>
         </div>
-        <div class="div_third">
-            <div></div>
-            <div class="text_boutton">
-                <h2></h2>
-                <p></p>
-                <button></button>
-            </div>
-            <div class="image_bas"></div>
+        <div class="col-md-4 text-center aos-init aos-animate"><img src="https://www.lapa.ninja/lab/atlas/img/smart-protect-3.jpg" alt="Smart Scan" class="mx-auto">
+        <h4>Smart Scan</h4>
+        <p>Et usu ocurreret elaboraret doctus prodesse assueverit.</p>
         </div>
-    </Div>
+    </div>
+    <div class="jumbotron jumbotron-fluid feature" id="feature-first" ><!-- jumbof open-->
+        <div class="container my-5"><!--container open-->
+        <div class="row justify-content-between text-center text-md-left"><!--row justified open-->
+            <div class="col-md-6 aos-init aos-animate"><!--fade right open-->
+                <h2 class="font-weight-bold">Take a look inside</h2>
+                <p class="my-4">Te iisque labitur eos, nec sale argumentum scribentur no,
+                    <br>
+                    augue disputando in vim. Erat fugit sit at, ius lorem deserunt deterruisset no.
+                </p>
+                <a href="#" class="btn my-4 font-weight-bold atlas-cta cta-blue"> Learn more</a>
+            </div><!--fade right close-->
+            <div class="col-md-6 align-self-center aos-init aos-animate"><!--fade left open-->
+                <img src="https://www.lapa.ninja/lab/atlas/img/feature-1.png" alt="Take a look inside" class="mx-auto d-block">
+            </div><!--fade left-->
+        </div><!--row justified close-->
+        </div><!--container close-->
+    </div><!--jumbof close-->
+    <div class="jumbotron jumbotron-fluid feature" id="feature-last"><!--jumbol open-->
+        <div class="container"><!--container open-->
+            <div class="row justify-content-between text-center text-md-left"><!--row justified open-->
+                <div class="col-md-6 flex-md-last aos-init aos-animate"><!--fade left open-->
+                    <h2 class="font-weight-bold">Safe and reliable</h2>
+                    <p class="my-4">Duo suas detracto maiestatis ad, commodo lucilius invenire nec ad,
+                        <br>
+                        eum et oratio disputationi. Falli lobortis his ad
+                    </p>
+                    <a href="#" class="btn my-4 font-weight-bold atlas-cta cta-blue">Learn more</a>
+                </div><!--fade left close-->
+                <div class="col-md-6 align-self-center flex-md-first aos-init aos-animate"><!--fade right open-->
+                    <img src="https://www.lapa.ninja/lab/atlas/img/feature-2.png" alt="Safe and reliable"class="mx-auto d-block">
+                </div><!--fade right close-->
+            </div><!--row justified close-->
+        </div><!--container close-->
+    </div><!--jumbol close-->
+</div>
 </body>
 </html>
