--- a/index_antoine.html
+++ b/index_antoine.html
@@ -5,28 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/style_antoine.css">
+    <link rel="stylesheet" href="./assets/css/aos.css">
+    <link rel="stylesheet" href="./font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./font-awesome-4.7.0/font/fontawesome-webfont.woff2">
+    <link rel="stylesheet" href="./assets/css/custom.css">
 </head>
-<body>
-<div class="container my-5 py-2">
+<body class="body">
+<div class="container my-5 py-2 blueberry_kush">
     <h2 class="text-center font-weight-bold my-5">Smartest protection for your site</h2>
-    <div class="row">
-        <div class="col-md-4 text-center aos-init aos-animate"><img src="https://www.lapa.ninja/lab/atlas/img/smart-protect-1.jpg" alt="anti-spam" class="mx-auto">
-        <h4>Anti-spam</h4>
-        <p>Lorem ipsum dolor sit amet porro his no his deleniti</p>
-        </div>
-        <div class="col-md-4 text-center aos-init aos-animate"><img src="https://www.lapa.ninja/lab/atlas/img/smart-protect-2.jpg" alt="Pishing detect" class="mx-auto">
-        <h4>Pishing Detect</h4>
-        <p>Ne error antiopam usu. Sed vocen concludaturque ea</p>
-        </div>
-        <div class="col-md-4 text-center aos-init aos-animate"><img src="https://www.lapa.ninja/lab/atlas/img/smart-protect-3.jpg" alt="Smart Scan" class="mx-auto">
-        <h4>Smart Scan</h4>
-        <p>Et usu ocurreret elaboraret doctus prodesse assueverit.</p>
+    <div class="row white_widow">
+        <div class="col-md-4 text-center aos-init aos-animate lemon_haze"><img src="https://www.lapa.ninja/lab/atlas/img/smart-protect-1.jpg" alt="anti-spam" class="mx-auto auto_jack">
+        <div class="try">
+            <h4 class="belladonna">Anti-spam</h4>
+        <p class="amnesia_haze">Lorem ipsum dolor sit amet porro his no his deleniti</p>
         </div>
     </div>
-    <div class="jumbotron jumbotron-fluid feature" id="feature-first" ><!-- jumbof open-->
+        <div class="col-md-4 text-center aos-init aos-animate lemon_haze"><img src="https://www.lapa.ninja/lab/atlas/img/smart-protect-2.jpg" alt="Pishing detect" class="mx-auto auto_jack">
+        <div class="try">
+            <h4>Pishing Detect</h4>
+        <p class="amnesia_haze">Ne error antiopam usu. Sed vocen concludaturque ea</p>
+        </div>
+    </div>
+        <div class="col-md-4 text-center aos-init aos-animate lemon_haze"><img src="https://www.lapa.ninja/lab/atlas/img/smart-protect-3.jpg" alt="Smart Scan" class="mx-auto auto_jack">
+        <div class="try">
+            <h4>Smart Scan</h4>
+        <p class="amnesia_haze">Et usu ocurreret elaboraret doctus prodesse assueverit.</p>
+        </div>
+    </div>
+    </div>
+    <div class="jumbotron jumbotron-fluid feature alien_kush" id="feature-first" ><!-- jumbof open-->
         <div class="container my-5"><!--container open-->
-        <div class="row justify-content-between text-center text-md-left"><!--row justified open-->
-            <div class="col-md-6 aos-init aos-animate"><!--fade right open-->
+        <div class="row justify-content-between text-center text-md-left acapulco_gold"><!--row justified open-->
+            <div class="col-md-6 aos-init aos-animate orange_bud"><!--fade right open-->
                 <h2 class="font-weight-bold">Take a look inside</h2>
                 <p class="my-4">Te iisque labitur eos, nec sale argumentum scribentur no,
                     <br>
@@ -40,10 +51,13 @@
         </div><!--row justified close-->
         </div><!--container close-->
     </div><!--jumbof close-->
-    <div class="jumbotron jumbotron-fluid feature" id="feature-last"><!--jumbol open-->
+    <div class="jumbotron jumbotron-fluid feature alien_kush" id="feature-last"><!--jumbol open-->
         <div class="container"><!--container open-->
-            <div class="row justify-content-between text-center text-md-left"><!--row justified open-->
-                <div class="col-md-6 flex-md-last aos-init aos-animate"><!--fade left open-->
+            <div class="row justify-content-between text-center text-md-left acapulco_gold"><!--row justified open-->
+                <div class="col-md-6 align-self-center flex-md-first aos-init aos-animate"><!--fade right open-->
+                    <img src="https://www.lapa.ninja/lab/atlas/img/feature-2.png" alt="Safe and reliable"class="mx-auto d-block">
+                </div><!--fade right close-->
+                <div class="col-md-6 flex-md-last aos-init aos-animate orange_bud"><!--fade left open-->
                     <h2 class="font-weight-bold">Safe and reliable</h2>
                     <p class="my-4">Duo suas detracto maiestatis ad, commodo lucilius invenire nec ad,
                         <br>
@@ -51,12 +65,10 @@
                     </p>
                     <a href="#" class="btn my-4 font-weight-bold atlas-cta cta-blue">Learn more</a>
                 </div><!--fade left close-->
-                <div class="col-md-6 align-self-center flex-md-first aos-init aos-animate"><!--fade right open-->
-                    <img src="https://www.lapa.ninja/lab/atlas/img/feature-2.png" alt="Safe and reliable"class="mx-auto d-block">
-                </div><!--fade right close-->
             </div><!--row justified close-->
         </div><!--container close-->
     </div><!--jumbol close-->
 </div>
+<script src="./assets/js/js_antoine.js"></script>
 </body>
 </html>
